--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+   
   </head>
   <body>
-    <div class="topbtn"><p>WELCOME TO ZORK 2</p></div>
+    <section class="contain">
+    <div class="topbtn"><img src="oni.png" height="200px" width ="200px">
+    </div>
     <div class="game">game goes here</div>
     <div>
       <button class="btn-blue">PLAY</button>
       <button class="btn-green">SAVE</button>
       <button class="btn-red">EXIT</button>
     </div>
+    </section>
   </body>
 </html>
