added important note to pyscript-notes... sorry for so many updates!

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
     <div>
         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
         <form name=input method=post action=player_input.py target="dummyframe">
-            <input type="text" id="prompt-input" name="prompt-input>
+            <input type="text" id="prompt-input" name="prompt-input">
             <button id="confirm-btn">Confirm</button>
         </form>
     </div>
