--- a/game.html
+++ b/game.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono">
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
   <py-env>
@@ -33,13 +35,13 @@
 
                 print(player_input)
         </py-script>
-    </div>
-    <div>
-        <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-        <form name=input action=/Zork/player_input.py target="dummyframe">
-            <input type="text" id="prompt-input" name="prompt-input">
-            <button id="confirm-btn">Confirm</button>
-        </form>
+        <div class="container">
+          <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+          <form name=input action=/Zork/player_input.py target="dummyframe">
+              <input type="text" id="prompt-input" name="prompt-input">
+              <button class="confirm-btn" id="confirm-btn">Confirm</button>
+          </form>
+        </div>
     </div>
     <div>
       <button class="btn-blue">PLAY</button>
