why does this still not workkkkk

--- a/game.html
+++ b/game.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <py-config>
-      src = "https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"
       lang = "python"
     </py-config>
     <section class="contain">
@@ -25,6 +24,7 @@
       <p id="message"></p>
       <p id="prompt"></p>
       <h2 id="test"></h2>
+      <p id="progress">0</p>
         <py-script src = "/Zork/main.py">
         </py-script>
         <div class="container">
