--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="https://cdn.jsdelivr.net/pyodide/dev/full/pyodide.js"></script>
   <script defer src="https://pyscript.net/latest/pyscript.js"></script>
   <py-env>
     - paths:
@@ -24,8 +25,14 @@
       <p id="message"></p>
       <p id="prompt"></p>
       <h2 id="test"></h2>
-      <p id="progress">0</p>
+      <p id="progress"></p>
         <py-script src = "/Zork/main.py">
+          # to use pyodide in a web page load pyodide.s and initialize Pyodide with loadPyodide
+          async function main() {
+            let pyodide = await loadPyodide();
+            console.log(pyodide.runPython("1 + 2"));
+          }
+          main();
         </py-script>
         <div class="container">
           <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
