added new p tag ids for enemies and ranks, as well as styling

--- a/game.html
+++ b/game.html
@@ -21,7 +21,9 @@
     <div class="topbtn"><img src="oni.png" height="200px" width ="200px">
     </div>
     <div class="game">
+      <h3 id="direction"></h3>
       <h2 id="important">&gt;&nbsp; loading...</h2>
+      <div class="rank-container"><div id="enemy"></div><div id="rank" style="font-size: .8rem;"></div></div>
       <p id="message"></p>
       <p id="horizontal-div" style="text-align:center;"></p>
       <p id="prompt"></p>
